Renamed parameters.ini with a -dist suffix, ignore .ini files in the config directory to prevent sensative data from being committed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-/vendors
-*/logs/*
-*/cache/*
-web/uploads/*
-web/bundles/*
+web/bundles/
+app/bootstrap*
+app/cache/*
+app/logs/*
+app/config/*.ini
+build/
+vendor/
+.idea
