--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,6 +4,7 @@ imports:
 
 framework:
     #esi:             ~
+    #translator:      { fallback: en }
     secret:          %secret%
     charset:         UTF-8
     router:          { resource: "%kernel.root_dir%/config/routing.yml" }
@@ -36,6 +37,7 @@ doctrine:
     dbal:
         driver:   %database_driver%
         host:     %database_host%
+        port:     %database_port%
         dbname:   %database_name%
         user:     %database_user%
         password: %database_password%
